--- a/test/fixtures/messages.yml
+++ b/test/fixtures/messages.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  number: MyText
+  number: MyString
   text: MyString
 
 two:
-  number: MyText
+  number: MyString
   text: MyString
